# PetProjects

./: HEPWorkshopIntro_to_Neural_Networks.ipynb  README.md
chatgpttests/: Cargo.toml
chatgpttests/chatgpt-examples/: Cargo.toml
chatgpttests/src/: main.rs
finance/: Cargo.toml
finance/tests/: Cargo.toml  realtime.rs
introml/: tensor.ipynb  tutorialdeeplearnzerotogans.ipynb  tutoriallinearregression.ipynb
rsmath/: Cargo.toml
rsmath/src/approximations/: equationformats.rs  integrationmethods.rs
rusttutorial/practicemodules/: Cargo.toml
